--- a/www/search.html
+++ b/www/search.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -32,11 +33,17 @@
                 <span id="title">Maverick Youth</span>
                 <a id="search" href="search.html"></a>
             </div>
+            <article id="article" class="s-article">
+                <h2 id="heading">Search Articles</h2>
+                <form id="searchf" action="#">
+                    <input type="text" id="searcht" placeholder="Enter keywords..." class="search" /><button type="submit" id="searchb" class="search">Search</button>
+                </form>
+            </article>
             <div id="display"></div>
         </div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/script.js"></script>
-        <script type="text/javascript" src="js/get.js"></script>
+        <script type="text/javascript" src="js/search.js"></script>
     </body>
 </html>
