--- a/www/post.html
+++ b/www/post.html
@@ -10,13 +10,13 @@
     </head>
     <body>
         <ul id="nav">
-            <a href="/">
+            <a href="index.html">
                 <li>Home</li>
             </a>
-            <a href="/search.html">
+            <a href="search.html">
                 <li>Search</li>
             </a>
-            <a href="/info.html">
+            <a href="info.html">
                 <li>About MY</li>
             </a>
         </ul>
