--- a/www/search.html
+++ b/www/search.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -7,17 +6,17 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
-        <title>Maverick Youth</title>
+        <title>Maverick Youth - Search</title>
     </head>
     <body>
         <ul id="nav">
-            <a href="/">
+            <a href="index.html">
                 <li>Home</li>
             </a>
-            <a href="/search.html">
+            <a href="search.html">
                 <li>Search</li>
             </a>
-            <a href="/info.html">
+            <a href="info.html">
                 <li>About MY</li>
             </a>
         </ul>
