--- a/www/info.html
+++ b/www/info.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -12,13 +11,16 @@
     <body>
         <ul id="nav">
             <a href="index.html">
-                <li>Home</li>
+                <li id="nav-home">Home</li>
             </a>
             <a href="search.html">
-                <li>Search</li>
+                <li id="nav-search">Search</li>
+            </a>
+            <a href="settings.html">
+                <li id="nav-settings">Settings</li>
             </a>
             <a href="info.html">
-                <li>About MY</li>
+                <li id="nav-about">About MY</li>
             </a>
         </ul>
         <div id="page">
@@ -30,7 +32,7 @@
                         <span class="bar b3"></span>
                     </div>
                 </a>
-                <span id="title">Maverick Youth</span>
+                <a href="index.html"><span id="title">Maverick Youth</span></a>
                 <a id="search" href="search.html"></a>
             </div>
             <article id="article">
