--- a/www/search.html
+++ b/www/search.html
@@ -6,18 +6,21 @@
         <meta name="msapplication-tap-highlight" content="no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/style.css" />
-        <title>Maverick Youth - Search</title>
+        <title>Maverick Youth</title>
     </head>
     <body>
         <ul id="nav">
             <a href="index.html">
-                <li>Home</li>
+                <li id="nav-home">Home</li>
             </a>
             <a href="search.html">
-                <li>Search</li>
+                <li id="nav-search">Search</li>
+            </a>
+            <a href="settings.html">
+                <li id="nav-settings">Settings</li>
             </a>
             <a href="info.html">
-                <li>About MY</li>
+                <li id="nav-about">About MY</li>
             </a>
         </ul>
         <div id="page">
@@ -29,7 +32,7 @@
                         <span class="bar b3"></span>
                     </div>
                 </a>
-                <span id="title">Maverick Youth</span>
+                <a href="index.html"><span id="title">Maverick Youth</span></a>
                 <a id="search" href="search.html"></a>
             </div>
             <article id="article" class="s-article">
